fixtures/errors/fetch_network_error.js
(async () => {
    try {
        await fetch("bad-scheme://example.com");
        console.log("no error");
    } catch (e) {
        console.log("error name:", e.name);
        console.log("error message includes fetch:", e.message.includes("fetch"));
    }
})();